force-app/main/default/objects/Parent_Information__c/Parent_Information__c.object-meta.xml
<CustomObject>
    <label>Parent Information</label>
    <nameField>
        <displayFormat>PIN-{0000}</displayFormat>
        <label>Parent Information Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Parent Informations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>