force-app/main/default/objects/Parent_Information__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Parent Informations</relationshipLabel>
    <relationshipName>Parent_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>