force-app/main/default/objects/Parent_Information__c/fields/Mailing_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address_1__c</fullName>
    <label>Mailing Address 1</label>
    <type>TextArea</type>
</CustomField>