force-app/main/default/objects/Parent_Information__c/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mailing City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Parent Informations</relationshipLabel>
    <relationshipName>Parent_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>