force-app/main/default/objects/Parent_Information__c/fields/Parent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Parent_Mobile__c</fullName>
    <label>Parent Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>