force-app/main/default/objects/Parent_Information__c/fields/Parent_Title__c.field-meta.xml
<CustomField>
    <fullName>Parent_Title__c</fullName>
    <label>Parent Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>