force-app/main/default/objects/Parent_Information__c/fields/Permanent_Address_1__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Address_1__c</fullName>
    <label>Permanent Address 1</label>
    <type>TextArea</type>
</CustomField>