force-app/main/default/objects/Parent_Information__c/fields/Permanent_City__c.field-meta.xml
<CustomField>
    <fullName>Permanent_City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Permanent City</label>
    <referenceTo>City__c</referenceTo>
    <relationshipLabel>Parent Informations (Permanent City)</relationshipLabel>
    <relationshipName>Parent_Informations1</relationshipName>
    <type>Lookup</type>
</CustomField>