force-app/main/default/objects/Parent_Information__c/fields/Permanent_Street__c.field-meta.xml
<CustomField>
    <fullName>Permanent_Street__c</fullName>
    <label>Permanent Street</label>
    <type>TextArea</type>
</CustomField>