force-app/main/default/objects/Parent_Information__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Parent Informations</relationshipLabel>
    <relationshipName>Parent_Informations</relationshipName>
    <type>Lookup</type>
</CustomField>